Added GuildRanks. Fixed issue with AsyncPlayerChatListener chatWaiterCache Code cleanup.